Refactor: Use Stream#toList