@@ -24,7 +24,6 @@ import net.dv8tion.jda.api.components.utils.ComponentIterator;
 import org.junit.jupiter.api.Test;
 
 import java.util.Collections;
-import java.util.stream.Collectors;
 
 import static org.junit.jupiter.api.Assertions.fail;
 import static org.mockito.Mockito.*;
@@ -60,18 +59,18 @@ public class ComponentPathIteratorTests {
                 break;
             case ACTION_ROW:
                 final ActionRow row = mock(ActionRow.class);
-                ComponentIterator.createStream(Collections.singleton(row)).collect(Collectors.toList());
+                ComponentIterator.createStream(Collections.singleton(row)).toList();
                 verify(row, times(1)).getComponents();
                 break;
             case SECTION:
                 final Section section = mock(Section.class);
-                ComponentIterator.createStream(Collections.singleton(section)).collect(Collectors.toList());
+                ComponentIterator.createStream(Collections.singleton(section)).toList();
                 verify(section, times(1)).getContentComponents();
                 verify(section, times(1)).getAccessory();
                 break;
             case CONTAINER:
                 final Container container = mock(Container.class);
-                ComponentIterator.createStream(Collections.singleton(container)).collect(Collectors.toList());
+                ComponentIterator.createStream(Collections.singleton(container)).toList();
                 verify(container, times(1)).getComponents();
                 break;
             default:
